--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,7 @@
 													</div>
 													<div id="nathanaenvideo" class="tab-pane fade">
 														<h4>Team Nathanaen</h4>
+														<br>Note: We do not approve of some of the incorrect uniform shown here..
 															<div class="embed-responsive embed-responsive-16by9">
 																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/eyaLCTMMA_A" allowfullscreen></iframe>
 															</div>
