--- a/public/update.html
+++ b/public/update.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DB HS Update Scores</title>
+  <title>DB HS HT Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -21,7 +21,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/resources">Resources</a></li>
-            <li class="active"><a href="#">Update Scores</a></li>
+            <li class="active"><a href="#">HT Page</a></li>
           </ul>
         </div>
       </div>
@@ -95,7 +95,7 @@
 						</div>
 						<div id="collapsebht" class="panel-collapse collapse in">
 							<div class="panel-body">
-                <div style="" class="pre-scrollable" id="bhtContents">
+                <div style="" id="bhtContents">
 
                   <div class="container">
                     <div class="row">
@@ -136,8 +136,10 @@
                     </div>
                   </div>
                   
+                  <div class="pre-scrollable">
                   <table class="table table-striped table-condensed table-hover table-responsive " id="SummaryTable">
 									</table>
+                  <br>
 
                   <table class="table table-striped table-condensed table-hover table-responsive " id="bhtContentsTable">
 											<!--<thead>
@@ -149,6 +151,7 @@
 											</tr>
 											</thead>-->
 									</table>
+                  </div>
 								</div>
 								
 							</div>
