add team phero video

--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,7 @@
 												<ul id="videotabs" class="nav nav-tabs">
 													<li class="active"><a data-toggle="tab" href="#vidinfo">Team Videos</a></li>
 													<li><a data-toggle="tab" href="#nathanaenvideo">Nathanaen</a></li>
+													<li><a data-toggle="tab" href="#pherovideo">Phero</a></li>
 													<li><a data-toggle="tab" href="#htvideo">HT</a></li>
 													<!--<li><a data-toggle="tab" href="#menu3">Menu 3</a></li>-->
 												</ul>
@@ -146,9 +147,16 @@
 													<div id="nathanaenvideo" class="tab-pane fade">
 														<h4>Team Nathanaen</h4>
 														<br>Note: We do not approve of some of the incorrect uniform shown here..
-															<div class="embed-responsive embed-responsive-16by9">
+														<div class="embed-responsive embed-responsive-16by9">
 																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/eyaLCTMMA_A" allowfullscreen></iframe>
-															</div>
+														</div>
+													</div>
+													<div id="pherovideo" class="tab-pane fade">
+														<h4>Team Phero</h4>
+														<br>
+														<div class="embed-responsive embed-responsive-16by9">
+																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/nA73LM2ck8s" allowfullscreen></iframe>
+														</div>
 													</div>
 
 													<div id="htvideo" class="tab-pane fade">
