--- a/public/index.html
+++ b/public/index.html
@@ -79,13 +79,14 @@
 										<div class="col-md-4">
 											<center><img src="images/hiepsi.png" id="penguin"></center>
 											<br>
-											<br>Top Team for October: <b>Anre</b>
+											<br><u>Top Teams</u>
+											<br>October: <b>Anre</b>
 											<br>
 											<font size="-1">
 											<br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
 											<br><b>Participation:</b> Up to <b>15 points</b> each Sunday
 											<br><b>BHT:</b> Up to <b>21 pts</b> per week (Each day: 1-3 members: 1 pt, 4-5 members: 2 pts, 6 or more members: 3 pts)
-											<br><b>Other Events:</b> Will be announced
+											<br><b>Other Opportunities:</b> Will be announced
 											</font>
 
 										</div>
@@ -93,8 +94,8 @@
 											<h2>Upcoming Events</h2>
 											<div>
 
-												<br>• November 20: Deadline to turn in shoebox project <b>(5 points)</b>
-												<br><font size="-1">If you need a shoebox just ask Anh Denny for one</font>
+												<br>• Thanks to everyone who turned in a shoebox!</b>
+												
 
 											</div>
 										</div>
@@ -122,7 +123,7 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<b>Team Music Video</b> - Due November 20
+											<b>Team Music Video</b> - Due December 4
 											<br>
 											Create a video of your team singing <a href="http://hiepsiaustin.herokuapp.com/resources" target="_blank">Hiep Si Ca</a> and acting out what each line means to you.  Feel free to be creative!
 											<br>Example here: <a href="https://www.youtube.com/watch?v=U5uRKxWoYRg" target="_blank">Doan from California</a>
@@ -135,7 +136,10 @@
 													<li class="active"><a data-toggle="tab" href="#vidinfo">Team Videos</a></li>
 													<li><a data-toggle="tab" href="#nathanaenvideo">Nathanaen</a></li>
 													<li><a data-toggle="tab" href="#pherovideo">Phero</a></li>
-													<li><a data-toggle="tab" href="#htvideo">HT</a></li>
+													<li><a data-toggle="tab" href="#giacobetienvideo">Giacobe Tien</a></li>
+													<li><a data-toggle="tab" href="#philiphevideo">Philiphe</a></li>
+													<li><a data-toggle="tab" href="#tomavideo">Toma</a></li>
+													<!--<li><a data-toggle="tab" href="#htvideo">HT</a></li>-->
 													<!--<li><a data-toggle="tab" href="#menu3">Menu 3</a></li>-->
 												</ul>
 
@@ -158,11 +162,32 @@
 																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/nA73LM2ck8s" allowfullscreen></iframe>
 														</div>
 													</div>
+													<div id="giacobetienvideo" class="tab-pane fade">
+														<h4>Team Giacobe Tien</h4>
+														<br>
+														<div class="embed-responsive embed-responsive-16by9">
+																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/meo2_7_F_f8" allowfullscreen></iframe>
+														</div>
+													</div>
+													<div id="philiphevideo" class="tab-pane fade">
+														<h4>Team Philiphe</h4>
+														<br>
+														<div class="embed-responsive embed-responsive-16by9">
+																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/kQ5jCcTMSok" allowfullscreen></iframe>
+														</div>
+													</div>
+													<div id="tomavideo" class="tab-pane fade">
+														<h4>Team Toma</h4>
+														<br>
+														<div class="embed-responsive embed-responsive-16by9">
+																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/zxnRgpD9vdU" allowfullscreen></iframe>
+														</div>
+													</div>
 
-													<div id="htvideo" class="tab-pane fade">
+													<!--<div id="htvideo" class="tab-pane fade">
 														<h4>HT video coming soon!</h4>
 									
-													</div>
+													</div>-->
 													<!--<div id="menu3" class="tab-pane fade">
 														<h4>Team 3</h4>
 																<div class="embed-responsive embed-responsive-16by9">
