--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,7 @@
 													<li><a data-toggle="tab" href="#giacobetienvideo">Giacobe Tien</a></li>
 													<li><a data-toggle="tab" href="#philiphevideo">Philiphe</a></li>
 													<li><a data-toggle="tab" href="#tomavideo">Toma</a></li>
+													<li><a data-toggle="tab" href="#anrevideo">Anre</a></li>
 													<!--<li><a data-toggle="tab" href="#htvideo">HT</a></li>-->
 													<!--<li><a data-toggle="tab" href="#menu3">Menu 3</a></li>-->
 												</ul>
@@ -181,6 +182,13 @@
 														<br>
 														<div class="embed-responsive embed-responsive-16by9">
 																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/zxnRgpD9vdU" allowfullscreen></iframe>
+														</div>
+													</div>
+													<div id="anrevideo" class="tab-pane fade">
+														<h4>Team Anre</h4>
+														<br>Non-watermarked version coming soon..
+														<div class="embed-responsive embed-responsive-16by9">
+																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/C22gQLBrj-s" allowfullscreen></iframe>
 														</div>
 													</div>
 
