switch to responsive youtube embeds

--- a/public/index.html
+++ b/public/index.html
@@ -153,42 +153,42 @@
 														<h4>Team Nathanaen</h4>
 														<br>Note: We do not approve of some of the incorrect uniform shown here..
 														<div class="embed-responsive embed-responsive-16by9">
-																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/eyaLCTMMA_A" allowfullscreen></iframe>
+															<div class="youtube-player" data-id="eyaLCTMMA_A"></div>
 														</div>
 													</div>
 													<div id="pherovideo" class="tab-pane fade">
 														<h4>Team Phero</h4>
 														<br>
 														<div class="embed-responsive embed-responsive-16by9">
-																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/nA73LM2ck8s" allowfullscreen></iframe>
+																<div class="youtube-player" data-id="nA73LM2ck8s"></div>
 														</div>
 													</div>
 													<div id="giacobetienvideo" class="tab-pane fade">
 														<h4>Team Giacobe Tien</h4>
 														<br>
 														<div class="embed-responsive embed-responsive-16by9">
-																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/meo2_7_F_f8" allowfullscreen></iframe>
+															<div class="youtube-player" data-id="meo2_7_F_f8"></div>
 														</div>
 													</div>
 													<div id="philiphevideo" class="tab-pane fade">
 														<h4>Team Philiphe</h4>
 														<br>
 														<div class="embed-responsive embed-responsive-16by9">
-																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/kQ5jCcTMSok" allowfullscreen></iframe>
+															<div class="youtube-player" data-id="kQ5jCcTMSok"></div>
 														</div>
 													</div>
 													<div id="tomavideo" class="tab-pane fade">
 														<h4>Team Toma</h4>
 														<br>
 														<div class="embed-responsive embed-responsive-16by9">
-																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/zxnRgpD9vdU" allowfullscreen></iframe>
+															<div class="youtube-player" data-id="zxnRgpD9vdU"></div>
 														</div>
 													</div>
 													<div id="anrevideo" class="tab-pane fade">
 														<h4>Team Anre</h4>
 														<br>Non-watermarked version coming soon..
 														<div class="embed-responsive embed-responsive-16by9">
-																<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/C22gQLBrj-s" allowfullscreen></iframe>
+															<div class="youtube-player" data-id="C22gQLBrj-s"></div>
 														</div>
 													</div>
 
