--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
 											<br>
 											<br><u>Top Teams</u>
 											<br>October: <b>Anre</b>
+											<br>November: <b>Toma</b> and <b>Giacobe Tien</b>
 											<br>
 											<font size="-1">
 											<br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
