add matthieu video

--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,7 @@
 													<li><a data-toggle="tab" href="#philiphevideo">Philiphe</a></li>
 													<li><a data-toggle="tab" href="#tomavideo">Toma</a></li>
 													<li><a data-toggle="tab" href="#anrevideo">Anre</a></li>
+													<li><a data-toggle="tab" href="#matthieuvideo">Matthieu</a></li>
 													<!--<li><a data-toggle="tab" href="#htvideo">HT</a></li>-->
 													<!--<li><a data-toggle="tab" href="#menu3">Menu 3</a></li>-->
 												</ul>
@@ -189,6 +190,13 @@
 														<br>Non-watermarked version coming soon..
 														<div class="embed-responsive embed-responsive-16by9">
 															<div class="youtube-player" data-id="C22gQLBrj-s"></div>
+														</div>
+													</div>
+													<div id="matthieuvideo" class="tab-pane fade">
+														<h4>Team Matthieu</h4>
+														<br>
+														<div class="embed-responsive embed-responsive-16by9">
+															<div class="youtube-player" data-id="8euTgWQsjDc"></div>
 														</div>
 													</div>
 
