--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,15 @@
 											<div>
 
 												<br>• Thanks to everyone who turned in a shoebox!</b>
+												<br>
+												<br>• <b><a href="images/adventretreat.png" target="_blank">Church Advent Retreat</a></b>
+												<font size="-1">
+												<br>• Saturday, December 10
+												<br>• 1pm - 9pm, at church
+												<br>• Opportunity for Confession
+												<br>• JAM at 7pm
+												<br>Attend the retreat, take a selfie there, and send it to Anh Denny for <b>4 points</b>.
+												<br>Bonus points if Sơ Huyền is in the picture!</font>
 												
 
 											</div>
