--- a/public/index.html
+++ b/public/index.html
@@ -97,14 +97,21 @@
 
 												<br>• Thanks to everyone who turned in a shoebox!</b>
 												<br>
-												<br>• <b><a href="images/adventretreat.png" target="_blank">Church Advent Retreat</a></b>
+												<br><b><a href="images/adventretreat.png" target="_blank">Church Advent Retreat</a></b>
 												<font size="-1">
 												<br>• Saturday, December 10
-												<br>• 1pm - 9pm, at church
-												<br>• Opportunity for Confession
-												<br>• JAM at 7pm
 												<br>Attend the retreat, take a selfie there, and send it to Anh Denny for <b>4 points</b>.
 												<br>Bonus points if Sơ Huyền is in the picture!</font>
+												<br>
+												<br>
+												<br><b><a href="/DCYCLetter" target="_blank">Diocesan Catholic Youth Conference (DCYC)</a></b>
+												<font size="-1">
+												<br>• Time: 6pm January 27 (Friday) - 5pm January 29 (Sunday)
+												<br>• Location: Waco Convention Center
+												<br>• Registration fee: $120 (includes registration, food, transportation, hotel)
+												<br>• <a href="/DCYCForm" target="_blank">Registration form</a>
+												<br>• <b>Note: Our church Tet celebration will be on January 29.</b>
+												</font>
 												
 
 											</div>
