--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,7 @@
 												<br>• Time: 6pm January 27 (Friday) - 5pm January 29 (Sunday)
 												<br>• Location: Waco Convention Center
 												<br>• Registration fee: $120 (includes registration, food, transportation, hotel)
+												<br>• Deadline to register: January 1, 2017
 												<br>• <a href="/DCYCForm" target="_blank">Registration form</a>
 												<br>• <b>Note: Our church Tet celebration will be on January 29.</b>
 												</font>
