add gioan video

--- a/public/index.html
+++ b/public/index.html
@@ -141,13 +141,7 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<b>Team Music Video</b> - Due December 4
-											<br>
-											Create a video of your team singing <a href="http://hiepsiaustin.herokuapp.com/resources" target="_blank">Hiep Si Ca</a> and acting out what each line means to you.  Feel free to be creative!
-											<br>Example here: <a href="https://www.youtube.com/watch?v=U5uRKxWoYRg" target="_blank">Doan from California</a>
-											<br><br><br>
-											
-											<h4>Submitted Videos</h4>
+											<h4>Hiep Si Ca Music Videos</h4>
 											
 											<div class="nav-set1">    
 												<ul id="videotabs" class="nav nav-tabs">
@@ -159,6 +153,7 @@
 													<li><a data-toggle="tab" href="#tomavideo">Toma</a></li>
 													<li><a data-toggle="tab" href="#anrevideo">Anre</a></li>
 													<li><a data-toggle="tab" href="#matthieuvideo">Matthieu</a></li>
+													<li><a data-toggle="tab" href="#gioanvideo">Gioan</a></li>
 													<!--<li><a data-toggle="tab" href="#htvideo">HT</a></li>-->
 													<!--<li><a data-toggle="tab" href="#menu3">Menu 3</a></li>-->
 												</ul>
@@ -215,6 +210,13 @@
 														<br>
 														<div class="embed-responsive embed-responsive-16by9">
 															<div class="youtube-player" data-id="8euTgWQsjDc"></div>
+														</div>
+													</div>
+													<div id="gioanvideo" class="tab-pane fade">
+														<h4>Team Gioan</h4>
+														<br>
+														<div class="embed-responsive embed-responsive-16by9">
+															<div class="youtube-player" data-id="SD7Q25UTNro"></div>
 														</div>
 													</div>
 
