--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
 											<br><u>Top Teams</u>
 											<br>October: <b>Anre</b>
 											<br>November: <b>Toma</b> and <b>Giacobe Tien</b>
+											<br>December: <b>Giacobe Tien</b> and <font size="-2"><b>Toma</b></font>
 											<br>
 											<font size="-1">
 											<br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
