update upcoming events

--- a/public/index.html
+++ b/public/index.html
@@ -98,23 +98,20 @@
 
 												<br>• Thanks to everyone who turned in a shoebox!</b>
 												<br>
-												<br><b><a href="images/adventretreat.png" target="_blank">Church Advent Retreat</a></b>
-												<font size="-1">
-												<br>• Saturday, December 10
-												<br>Attend the retreat, take a selfie there, and send it to Anh Denny for <b>4 points</b>.
-												<br>Bonus points if Sơ Huyền is in the picture!</font>
-												<br>
-												<br>
+												
 												<br><b><a href="/DCYCLetter" target="_blank">Diocesan Catholic Youth Conference (DCYC)</a></b>
 												<font size="-1">
 												<br>• Time: 6pm January 27 (Friday) - 5pm January 29 (Sunday)
 												<br>• Location: Waco Convention Center
-												<br>• Registration fee: $120 (includes registration, food, transportation, hotel)
-												<br>• Deadline to register: January 1, 2017
-												<br>• <a href="/DCYCForm" target="_blank">Registration form</a>
 												<br>• <b>Note: Our church Tet celebration will be on January 29.</b>
 												</font>
 												
+												<br><br>
+												<br><b><u>Spring Break Camp!</u></b>
+												<font size="-1">
+												<br>• Time: March 11 (Saturday) - March 13 (Monday)
+												<br>• Location: Eagles' Wings Retreat Center
+												</font>
 
 											</div>
 										</div>
