--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,6 @@
 											<h2>Upcoming Events</h2>
 											<div>
 
-												<br>• Thanks to everyone who turned in a shoebox!</b>
 												<br>
 												
 												<br><b><a href="/DCYCLetter" target="_blank">Diocesan Catholic Youth Conference (DCYC)</a></b>
@@ -106,6 +105,14 @@
 												<br>• <b>Note: Our church Tet celebration will be on January 29.</b>
 												</font>
 												
+												<br><br>
+												<br><b><u>Paint Tet Game Booths</u></b>
+												<font size="-1">
+												<br>• Come out and help paint the game booths!  Artistic skills are a plus, but not required.  Lunch will be provided!
+												<br>• Time: Saturday January 28, 1-3pm
+												<br>• Location: Church parking lot
+												</font>
+
 												<br><br>
 												<br><b><u>Spring Break Camp!</u></b>
 												<font size="-1">
