--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
 
 												<br>
 												
-												<br><b><a href="/DCYCLetter" target="_blank">Diocesan Catholic Youth Conference (DCYC)</a></b>
+												<!--<br><b><a href="/DCYCLetter" target="_blank">Diocesan Catholic Youth Conference (DCYC)</a></b>
 												<font size="-1">
 												<br>• Time: 6pm January 27 (Friday) - 5pm January 29 (Sunday)
 												<br>• Location: Waco Convention Center
@@ -111,9 +111,9 @@
 												<br>• Come out and help paint the game booths!  Artistic skills are a plus, but not required.  Lunch will be provided!
 												<br>• Time: Saturday January 28, 1-3pm
 												<br>• Location: Church parking lot
-												</font>
+												</font>-->
 
-												<br><br>
+												<!--<br><br>-->
 												<br><b><u>Spring Break Camp!</u></b>
 												<font size="-1">
 												<br>• Time: March 11 (Saturday) - March 13 (Monday)
