--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,7 @@
 											<br>October: <b>Anre</b>
 											<br>November: <b>Toma</b> and <b>Giacobe Tien</b>
 											<br>December: <b>Giacobe Tien</b> and <font size="-2"><b>Toma</b></font>
+											<br>January: <b>Nathanaen</b> and <font size="-1">(<b>Toma</b> and <b>Giacobe Tien</b>)</font>
 											<br>
 											<font size="-1">
 											<br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
@@ -98,15 +99,14 @@
 
 												<br>
 												
-												<!--<br><b><a href="/DCYCLetter" target="_blank">Diocesan Catholic Youth Conference (DCYC)</a></b>
+												<br><b>SBC Team Meetings</b>
 												<font size="-1">
-												<br>• Time: 6pm January 27 (Friday) - 5pm January 29 (Sunday)
-												<br>• Location: Waco Convention Center
-												<br>• <b>Note: Our church Tet celebration will be on January 29.</b>
+												<br>• Time: February 24, March 3, March 10 (Fridays), 7-9pm
+												<br>• Location: Church
 												</font>
 												
 												<br><br>
-												<br><b><u>Paint Tet Game Booths</u></b>
+												<!--<br><b><u>Paint Tet Game Booths</u></b>
 												<font size="-1">
 												<br>• Come out and help paint the game booths!  Artistic skills are a plus, but not required.  Lunch will be provided!
 												<br>• Time: Saturday January 28, 1-3pm
