add rltl to resources

--- a/public/resources.html
+++ b/public/resources.html
@@ -80,6 +80,36 @@
 				</div>
 			</div>
 
+
+			<div class="row animatedpanel">
+				<div class="col-xs-12">
+					<div class="panel panel-primary">
+						<div class="panel-heading" id="RLTLHeading">
+							<h3 class="panel-title">
+								<a id="ruocLeThiengLieng" data-toggle="collapse" data-target="#collapseRLTL" href="#collapseRLTL" onclick="return false;">
+								Kinh Rước Lễ Thiêng Liêng
+								</a>
+							</h3>
+						</div>
+						<div id="collapseRLTL" class="panel-collapse collapse">
+							<div class="panel-body">
+								<div class="container">
+									<div class="row">
+
+										Lạy Chúa Giêsu Thánh Thể.
+										<br>Con yêu mến Chúa.
+										<br>Xin Chúa ngự vào tâm hồn con,
+										<br>và ở lại với con luôn mãi.
+										<br>Amen.
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div class="row animatedpanel">
 				<div class="col-xs-12">
 					<div class="panel panel-primary">
