add songs to resources

--- a/public/resources.html
+++ b/public/resources.html
@@ -276,6 +276,45 @@
 			</div>
 
 
+			<div class="row animatedpanel">
+				<div class="col-xs-12">
+					<div class="panel panel-primary">
+						<div class="panel-heading" id="RLTLHeading">
+							<h3 class="panel-title">
+								<a id="song1" data-toggle="collapse" data-target="#collapsesong1" href="#collapsesong1" onclick="return false;">
+								Sinh Hoạt Songs
+								</a>
+							</h3>
+						</div>
+						<div id="collapsesong1" class="panel-collapse collapse">
+							<div class="panel-body">
+								<div class="container">
+									<div class="row">
+
+										<h4>Praise and Love for Jesus (English)</h4>
+										Jesus Christ came down for us, cause he loved us so.
+										<br>He was put to the death, but he rose again.
+										<br>Let us sing, let us dance, for the risen Lord.
+										<br>Let us sing, let us dance, cause he saved the world.
+										<br>
+										<br>
+										<h4>Praise and Love for Jesus (Viet)</h4>
+										Thật có Chúa ở trong người, không nhìn thấy mà tin.
+										<br>Thật có Chúa ở trong người, Chúa hiện diện khắp nơi.
+										<br>Chúa trong anh, Chúa trong em, ta cùng yêu Chúa luôn.
+										<br>Chúa trong anh, Chúa trong em, ta cùng yêu Chúa nhiều.
+										
+
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 
 		</div>
 
