--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,8 @@
 												•If your question is personal or if you would like an quick response, include your email and Anh Quang will respond to you directly.  Otherwise, general questions will be covered in Anh Quang's next lesson.
 												<br>•If you have suggestions or issues, please post those in the box as well.</font>
 											<br>
+											<br>
+											<h5>Songs that you should know for camp have been added to the <a href="/resources">Resources</a> tab</h5>
 
 										</div>
 										<div class="col-md-4">
@@ -106,18 +108,24 @@
 												</font>
 												
 												<br><br>
-												<!--<br><b><u>Paint Tet Game Booths</u></b>
-												<font size="-1">
-												<br>• Come out and help paint the game booths!  Artistic skills are a plus, but not required.  Lunch will be provided!
-												<br>• Time: Saturday January 28, 1-3pm
-												<br>• Location: Church parking lot
-												</font>-->
+
 
 												<!--<br><br>-->
 												<br><b><u>Spring Break Camp!</u></b>
 												<font size="-1">
 												<br>• Time: March 11 (Saturday) - March 13 (Monday)
 												<br>• Location: Eagles' Wings Retreat Center
+												</font>
+
+												<br><br>
+												<br><b>Đại Hội Nghĩa Hiệp</b>
+												<font size="-1">
+												<br>• Time: June 29 - July 2, 2017
+												<br>• Location: Giáo Xứ Đức Mẹ La Vang
+												<br>12320 Old Foltin Rd, Houston, TX 77086
+												<br>• Registration Fee: $80
+												<br>• Competitions: Sports, Jeopardy, Văn nghệ 
+												<br>• More info to come!
 												</font>
 
 											</div>
