--- a/public/resources.html
+++ b/public/resources.html
@@ -125,6 +125,7 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-6">
+                    <h4>Hiệp Sĩ Ca</h4>
                                             Hiệp Sĩ, tiến bước vào đời. <b>Thánh Thể Giêsu</b>, lấy làm nguồn sống.
 											<br><b>DK:</b> Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
 											<br>
@@ -140,6 +141,7 @@
 													</audio>
 										</div>
 										<div class="col-md-6">
+                    <h4>English Translation</h4>
                                             Hiep Si, moving forward into the world, take the <b>Eucharist</b> as the source of life.
 											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
                                             <br><br>Hiep Si, moving forward into the world, our maxims are <b>Fraternity, Charity, Service, and Unity</b>
@@ -434,7 +436,7 @@
 										<br>Giêsu con một Cha xuống trần làm người.
 										<br><br>Suốt cuộc đời ba mươi năm làm người vâng lời treo gương sáng. 
 										<br>Hai ba năm về sau ra đời dạy lời.
-										<br><br>Giữa muôn lời, lời này t hật lạ đời, nhưng là lời hay nhất. 
+										<br><br>Giữa muôn lời, lời này thật lạ đời, nhưng là lời hay nhất. 
 										<br>Yêu thương anh chị em như là mình vậy.
 										<br><br>Dẫu cho là người mình đầy cảm tình, hay người không ưa thích, 
 										<br>luôn yêu thương bằng nhau ấy là lời Thầy.
