--- a/public/resources.html
+++ b/public/resources.html
@@ -330,6 +330,24 @@
 								<div class="container">
 									<div class="row">
 
+										<h4>Faith, Hope, and Love</h4>
+										Faith, faith, faith just a little bit of faith.
+										<br>Faith, faith, faith just a little bit of faiiiitthhhh. 
+										<br>You don’t need a whole lot, just use what you got. 
+										<br>Faith, faith, faith just a little bit of faith.
+										<br>(verse 2) Hope, hope, hope...
+										<br>(verse 3) Love, love, love...
+										
+										<br><br>
+										<h4>Hosanna</h4>
+										Ho – Ho – Ho Hosanna. 
+										<br>Ha – Ha – Ha Halleluiah
+										<br>He – He – He He saved me
+										<br>And I’ve got the Joy of the Lord. (repeat and go faster!)
+										<br>And I’ve got the Joy, I’ve got the Joy, I’ve got the Joy of the Lord (after 3rd time)
+
+										<br><br>
+
 										<h4>Praise and Love for Jesus (English)</h4>
 										Jesus Christ came down for us, cause he loved us so.
 										<br>He was put to the death, but he rose again.
@@ -342,6 +360,13 @@
 										<br>Thật có Chúa ở trong người, Chúa hiện diện khắp nơi.
 										<br>Chúa trong anh, Chúa trong em, ta cùng yêu Chúa luôn.
 										<br>Chúa trong anh, Chúa trong em, ta cùng yêu Chúa nhiều.
+
+										<br><br>
+										<h4>BIẾT CHÚA YÊU CHÚA</h4>
+										Ngài yêu chúng con. Vì con bé ngoan. 
+										<br>Con hát con ca. Tình Ngài bao la.
+										<br>Mình đi Thiếu Nhi. Để biết Chúa hơn. 
+										<br>Yêu Chúa yêu Mẹ, Và yêu thương nhau.
 										
 
 
