update top teams

--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,8 @@
 									<div class="row">
 										<div class="col-md-4">
 											<h2>Announcements</h2>
-											Please enroll in the Remind group to receive important announcements!
-											<br><br>
+											<!--Please enroll in the Remind group to receive important announcements!-->
+											<!--<br><br>-->
 											Ask Anh Quang or any HT a question:
 											<br><a href='http://quangxvu-developer-edition.na14.force.com/anonbox' target="_blank">Anonymous Question Box</a>
 											<br><font size="-1">
@@ -86,6 +86,7 @@
 											<br>November: <b>Toma</b> and <b>Giacobe Tien</b>
 											<br>December: <b>Giacobe Tien</b> and <font size="-2"><b>Toma</b></font>
 											<br>January: <b>Nathanaen</b> and <font size="-1">(<b>Toma</b> and <b>Giacobe Tien</b>)</font>
+											<br>February: <b>Giacobe Tien</b>
 											<br>
 											<font size="-1">
 											<br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
