lent bht triple points

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,13 @@
 											<h2>Announcements</h2>
 											<!--Please enroll in the Remind group to receive important announcements!-->
 											<!--<br><br>-->
+											<h5>As we go through our spiritual journey of Lent, taking time to reflect and do the BHT will give triple points</h5>
+											<br><br>
+
+
+											<h5>Songs that you should know for camp have been added to the <a href="/resources">Resources</a> tab</h5>
+											<br><br>
+
 											Ask Anh Quang or any HT a question:
 											<br><a href='http://quangxvu-developer-edition.na14.force.com/anonbox' target="_blank">Anonymous Question Box</a>
 											<br><font size="-1">
@@ -75,7 +82,7 @@
 												<br>•If you have suggestions or issues, please post those in the box as well.</font>
 											<br>
 											<br>
-											<h5>Songs that you should know for camp have been added to the <a href="/resources">Resources</a> tab</h5>
+											
 
 										</div>
 										<div class="col-md-4">
