dhnh info and forms

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,42 @@
 												<br>12320 Old Foltin Rd, Houston, TX 77086
 												<br>• Registration Fee: $80
 												<br>• Competitions: Sports, Jeopardy, Văn nghệ 
+												
+												<div class="row">
+												<div class="col-md-4">
+
+												<h5>Sports</h5>
+												<ul>
+													<li>• Basketball</li>
+													<li>• Soccer</li>
+													<li>• Volleyball</li>
+													<li>• Maybe more, not sure yet</li>
+												</ul>
+												</div>
+												<div class="col-md-8">
+													<h5>Van Nghe</h5>
+													<ul class="list-unstyled">
+														<li>Friday: Ca Dao Việt Nam</li>
+														<!--<li>
+															<ul>
+																<li>Dance and/or skit</li>
+																<li>văn hóa</li>
+																<li>lịch sử</li>
+																<li>quê hương</li>
+															</ul>
+														</li>-->
+														<li>Saturday: Đồng hành với Chúa</li>
+													</ul>
+												</div>
+												</div>
+
 												<br>• More info to come!
+												<br>
+												<h5>Forms</h5>
+												<a href="/DHNHLetter" target="_blank">Thong Bao</a>
+												<br><a href="/DHNHForm1" target="_blank">Form 1: Registration</a>
+												<br><a href="/DHNHForm2" target="_blank">Form 2: Personal Health</a>
+												<br><a href="/DHNHForm3" target="_blank">Form 3: VAP form</a>
 												</font>
 
 											</div>
