--- a/public/resources.html
+++ b/public/resources.html
@@ -362,12 +362,19 @@
 										<br>Chúa trong anh, Chúa trong em, ta cùng yêu Chúa nhiều.
 
 										<br><br>
-										<h4>BIẾT CHÚA YÊU CHÚA</h4>
+										<h4>Biết Chúa Yêu Chúa</h4>
 										Ngài yêu chúng con. Vì con bé ngoan. 
 										<br>Con hát con ca. Tình Ngài bao la.
 										<br>Mình đi Thiếu Nhi. Để biết Chúa hơn. 
 										<br>Yêu Chúa yêu Mẹ, Và yêu thương nhau.
 										
+										<br><br>
+										<h4>Inright Outright</h4>
+										I'm inright outright upright downright happy all the time
+										<br>I'm inright outright upright downright happy all the time.
+										<br>When Jesus Christ came in
+										<br>He washed away my sins
+										<br>I'm inright outright upright downright happy all the time.
 
 
 									</div>
