--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
 												</ul>
 												</div>
 												<div class="col-md-8">
-													<h5>Van Nghe</h5>
+													<h5>Văn Nghệ</h5>
 													<ul class="list-unstyled">
 														<li>Friday: Ca Dao Việt Nam</li>
 														<!--<li>
@@ -146,6 +146,7 @@
 												<br><a href="/DHNHForm1" target="_blank">Form 1: Registration</a>
 												<br><a href="/DHNHForm2" target="_blank">Form 2: Personal Health</a>
 												<br><a href="/DHNHForm3" target="_blank">Form 3: VAP form</a>
+												<h6>Note for Seniors: If you will be 18 years old by the date of camp, you are allowed to register as a participant under the category "Hiep Si 18+" on the condition that you attend ethics training (EIM) and show the certificate at camp.  You are still eligible to participate in all the activities such as sports and văn nghệ. </h6>
 												</font>
 
 											</div>
