--- a/public/index.html
+++ b/public/index.html
@@ -104,39 +104,40 @@
 											<h2>Upcoming Events</h2>
 											<div>
 												<br><b>Đại Hội Nghĩa Hiệp</b>
-												<font size="-1">
+												<!--<font size="-1">-->
 												<br>• Time: June 29 - July 2, 2017
 												<br>• Location: Giáo Xứ Đức Mẹ La Vang
 												<br>12320 Old Foltin Rd, Houston, TX 77086
 												<br>• Registration Fee: $80
+												<br>• Deadline to register: May 31
 												<br>• Competitions: Sports, Jeopardy, Văn nghệ 
 												
 												<div class="row">
-												<div class="col-md-4">
+													<div class="col-md-4">
 
-												<h5>Sports</h5>
-												<ul>
-													<li>• Basketball</li>
-													<li>• Soccer</li>
-													<li>• Volleyball</li>
-													<li>• Maybe more, not sure yet</li>
-												</ul>
-												</div>
-												<div class="col-md-8">
-													<h5>Văn Nghệ</h5>
-													<ul class="list-unstyled">
-														<li>Friday: Ca Dao Việt Nam</li>
-														<!--<li>
-															<ul>
-																<li>Dance and/or skit</li>
-																<li>văn hóa</li>
-																<li>lịch sử</li>
-																<li>quê hương</li>
-															</ul>
-														</li>-->
-														<li>Saturday: Đồng hành với Chúa</li>
+													<h5>Sports</h5>
+													<ul>
+														<li>• Basketball</li>
+														<li>• Soccer</li>
+														<li>• Volleyball</li>
+														<li>• Maybe more, not sure yet</li>
 													</ul>
-												</div>
+													</div>
+													<div class="col-md-8">
+														<h5>Văn Nghệ</h5>
+														<ul class="list-unstyled">
+															<li>Friday: Ca Dao Việt Nam</li>
+															<!--<li>
+																<ul>
+																	<li>Dance and/or skit</li>
+																	<li>văn hóa</li>
+																	<li>lịch sử</li>
+																	<li>quê hương</li>
+																</ul>
+															</li>-->
+															<li>Saturday: Đồng hành với Chúa</li>
+														</ul>
+													</div>
 												</div>
 
 												<br>• More info to come!
@@ -147,7 +148,7 @@
 												<br><a href="/DHNHForm2" target="_blank">Form 2: Personal Health</a>
 												<br><a href="/DHNHForm3" target="_blank">Form 3: VAP form</a>
 												<h6>Note for Seniors: If you will be 18 years old by the date of camp, you are allowed to register as a participant under the category "Hiep Si 18+" on the condition that you attend ethics training (EIM) and show the certificate at camp.  You are still eligible to participate in all the activities such as sports and văn nghệ. </h6>
-												</font>
+												<!--</font>-->
 
 											</div>
 										</div>
