--- a/public/resources.html
+++ b/public/resources.html
@@ -26,6 +26,8 @@
         .sr .animatedpanel { visibility: hidden; }
 
         </style>
+
+				
         
 	</head>
 
@@ -49,7 +51,7 @@
 		<div class="container">
 
 			<div class="row animatedpanel">
-				<div class="col-xs-12">
+				<div class="col-sm-12 col-md-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="teamNamesHeading">
 							<h3 class="panel-title">
@@ -78,37 +80,38 @@
 						</div>
 					</div>
 				</div>
-			</div>
 
+			<div class="col-sm-12 col-md-6">
+				<div class="panel panel-primary">
+					<div class="panel-heading" id="RLTLHeading">
+						<h3 class="panel-title">
+							<a id="ruocLeThiengLieng" data-toggle="collapse" data-target="#collapseRLTL" href="#collapseRLTL" onclick="return false;">
+							Kinh Rước Lễ Thiêng Liêng
+							</a>
+						</h3>
+					</div>
+					<div id="collapseRLTL" class="panel-collapse collapse">
+						<div class="panel-body">
+							<div class="container">
+								<div class="row">
 
-			<div class="row animatedpanel">
-				<div class="col-xs-12">
-					<div class="panel panel-primary">
-						<div class="panel-heading" id="RLTLHeading">
-							<h3 class="panel-title">
-								<a id="ruocLeThiengLieng" data-toggle="collapse" data-target="#collapseRLTL" href="#collapseRLTL" onclick="return false;">
-								Kinh Rước Lễ Thiêng Liêng
-								</a>
-							</h3>
-						</div>
-						<div id="collapseRLTL" class="panel-collapse collapse">
-							<div class="panel-body">
-								<div class="container">
-									<div class="row">
+									Lạy Chúa Giêsu Thánh Thể.
+									<br>Con yêu mến Chúa.
+									<br>Xin Chúa ngự vào tâm hồn con,
+									<br>và ở lại với con luôn mãi.
+									<br>Amen.
 
-										Lạy Chúa Giêsu Thánh Thể.
-										<br>Con yêu mến Chúa.
-										<br>Xin Chúa ngự vào tâm hồn con,
-										<br>và ở lại với con luôn mãi.
-										<br>Amen.
-
-									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
+			</div>
+
+
+
 
 			<div class="row animatedpanel">
 				<div class="col-xs-12">
@@ -126,13 +129,13 @@
 									<div class="row">
 										<div class="col-md-6">
                     <h4>Hiệp Sĩ Ca</h4>
-                                            Hiệp Sĩ, tiến bước vào đời. <b>Thánh Thể Giêsu</b>, lấy làm nguồn sống.
+											Hiệp Sĩ, tiến bước vào đời. <b>Thánh Thể Giêsu</b>, lấy làm nguồn sống.
 											<br><b>DK:</b> Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
 											<br>
-                                            <br>Hiệp Sĩ, tiến bước vào đời. <b>Huynh Đệ, Bác Ái, Phục Vụ, Hiệp Nhất</b>.
+											<br>Hiệp Sĩ, tiến bước vào đời. <b>Huynh Đệ, Bác Ái, Phục Vụ, Hiệp Nhất</b>.
 											<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
 											<br>
-                                            <br>Hiệp Sĩ, tiến bước vào đời. <b>Phúc Thật Tám Mối</b>. Theo lời Chúa phán.
+											<br>Hiệp Sĩ, tiến bước vào đời. <b>Phúc Thật Tám Mối</b>. Theo lời Chúa phán.
 											<br>Này anh em ơi tay nắm tay, dấn thân phục vụ, Hiệp Sĩ sá chi thân mình.
 											<br>
 											<br><audio controls>
@@ -142,11 +145,11 @@
 										</div>
 										<div class="col-md-6">
                     <h4>English Translation</h4>
-                                            Hiep Si, moving forward into the world, take the <b>Eucharist</b> as the source of life.
+											Hiep Si, moving forward into the world, take the <b>Eucharist</b> as the source of life.
 											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
-                                            <br><br>Hiep Si, moving forward into the world, our maxims are <b>Fraternity, Charity, Service, and Unity</b>
+											<br><br>Hiep Si, moving forward into the world, our maxims are <b>Fraternity, Charity, Service, and Unity</b>
 											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
-                                            <br><br>Hiep Si, moving foward into the world, our ideals are based on the <b>8 Beatitudes</b>.
+											<br><br>Hiep Si, moving foward into the world, our ideals are based on the <b>8 Beatitudes</b>.
 											<br>Brothers and sisters, together we commit to serve.  As Hiep Si we offer our lives.
 											<br>
 
@@ -160,7 +163,7 @@
 			</div>
 
 			<div class="row animatedpanel">
-				<div class="col-xs-12">
+				<div class="col-sm-12 col-md-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="beatitudesHeading">
 							<h3 class="panel-title">
@@ -176,13 +179,14 @@
 
 										<b>Matthew 5:3-10</b>
 										<br>Blessed are the poor in spirit, for theirs is the kingdom of heaven.
-										<br>Blessed are they who mourn, for they will be comforted.
-										<br>Blessed are the meek, fo rthey will inherit the land.
-										<br>Blessed are they who hunger and thirst for righteousness, for they will be satisfied.
-										<br>Blessed are the merciful, for they will be shown mercy.
-										<br>Blessed are the clean of heart, for they will see God.
-										<br>Blessed are the peacemakers, for they will be called children of God.
-										<br>Blessed are they who are persecuted for the sake of righteousness, for theirs is the kingdom of heaven.
+										<br><br>Blessed are they who mourn, for they will be comforted.
+										<br><br>Blessed are the meek, for they will inherit the land.
+										<br><br>Blessed are they who hunger and thirst for righteousness, for they will be satisfied.
+										<br><br>Blessed are the merciful, for they will be shown mercy.
+										<br><br>Blessed are the clean of heart, for they will see God.
+										<br><br>Blessed are the peacemakers, for they will be called children of God.
+										<br><br>Blessed are they who are persecuted for the sake of righteousness, 
+										<br>for theirs is the kingdom of heaven.
 
 									</div>
 								</div>
@@ -190,10 +194,8 @@
 						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="row animatedpanel">
-				<div class="col-xs-12">
+				<div class="col-sm-12 col-md-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="10DTNheading">
 							<h3 class="panel-title">
@@ -208,46 +210,50 @@
 									<div class="row">
 										1. Thiếu Nhi mỗi sáng dâng ngày,
 										<br>Điểm tô đời sống hương bay nguyện cầu.
-										<br>
+										<!--<br>-->
 										<br>2. Thiếu Nhi Thánh Thể nhiệm mầu,
 										<br>Tôn sùng rước lễ, nhà chầu viếng thăm.
-										<br>
+										<!--<br>-->
 										<br>3. Thiếu Nhi Thánh Giá Chúa nằm,
 										<br>Nhìn lên phấn khởi chuyên cần hy sinh.
-										<br>
+										<!--<br>-->
 										<br>4. Thiếu Nhi nhờ Mẹ đinh ninh,
 										<br>Quyết làm gương sáng xứng danh tông đồ.
-										<br>
+										<!--<br>-->
 										<br>5. Thiếu Nhi mọi việc nhỏ to,
 										<br>Tinh thần vâng phục chuyên lo đậm đà.
-										<br>
+										<!--<br>-->
 										<br>6. Thiếu Nhi đằm thắm nết na,
 										<br>Nói năng hành động nõn nà trắng trong.
-										<br>
+										<!--<br>-->
 										<br>7. Thiếu Nhi bác ái một lòng,
 										<br>Tim luôn quảng đại mới mong giúp người.
-										<br>
+										<!--<br>-->
 										<br>8. Thiếu Nhi ngay thẳng trọn đời,
 										<br>Nói làm đúng mực người người tin yêu.
-										<br>
+										<!--<br>-->
 										<br>9. Thiếu Nhi dù khó trăm chiều,
 										<br>Chu toàn bổn phận mọi điều chăm chuyên.
-										<br>
+										<!--<br>-->
 										<br>10. Thiếu Nhi thực hiện hoa thiêng,
 										<br>Chép ghi mỗi tối cộng biên mỗi tuần.
 										<br>
+
+
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+
 			</div>
 
 
 
+
 			<div class="row animatedpanel">
-				<div class="col-xs-12">
+				<div class="col-sm-12 col-md-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="TNTHCPanelHeading">
 							<h3 class="panel-title">
@@ -260,14 +266,18 @@
 							<div class="panel-body">
 								<div class="container">
 									<div class="row">
-										Thiếu Nhi Việt Nam đứng lên trong giai đoạn mới, theo tiếng Giáo Hội và tiếng quê hương kêu mời.
-										<br>Được trang bị dũng mạnh bằng tinh thần mới, tuổi trẻ Việt Nam hăng hái xây thế hệ ngày mai.
+										Thiếu Nhi Việt Nam đứng lên trong giai đoạn mới, 
+										<br>theo tiếng Giáo Hội và tiếng quê hương kêu mời.
+										<br>Được trang bị dũng mạnh bằng tinh thần mới, 
+										<br>tuổi trẻ Việt Nam hăng hái xây thế hệ ngày mai.
 										<br>
 										<br>Cùng đi hỡi các Thiếu Nhi, cùng đi với Chúa Kitô.
 										<br>Nguồn Sống Thánh Thể chan hòa, là lý tưởng của người Thiếu Nhi hôm nay!
 										<br>
-										<br>Thiếu Nhi Việt Nam quyết tâm trong giai đoạn mới, thánh hóa môi trường rèn những khả năng phi thường.
-										<br>Bằng nguyện cầu hy sinh và một bầu khí mới, tuổi trẻ Việt Nam đem Chúa cho giới trẻ mọi nơi.
+										<br>Thiếu Nhi Việt Nam quyết tâm trong giai đoạn mới, 
+										<br>thánh hóa môi trường rèn những khả năng phi thường.
+										<br>Bằng nguyện cầu hy sinh và một bầu khí mới, 
+										<br>tuổi trẻ Việt Nam đem Chúa cho giới trẻ mọi nơi.
 										<br>
 									</div>
 								</div>
@@ -275,10 +285,8 @@
 						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="row animatedpanel">
-				<div class="col-xs-12">
+				<div class="col-sm-12 col-md-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading" id="QCPanelHeading">
 							<h3 class="panel-title">
@@ -312,7 +320,9 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
+
 
 
 			<div class="row animatedpanel">
@@ -546,6 +556,11 @@
         </script>
 
 		<script src="js/utils/jquery.min.js"></script>
+		<script type="text/javascript">
+		if ($(document).width() > 768 ) {
+            $('.panel-collapse').addClass('in');
+        }
+		</script>
 		<script src="js/utils/bootstrap.min.js"></script>
 	</body>
 </html>
