side navbar for resources

--- a/public/update.html
+++ b/public/update.html
@@ -19,8 +19,8 @@
         </div>
         <div class="collapse navbar-collapse" id="collapseNav">
           <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/resources">Resources</a></li>
+            <li><a href="/"><i class="glyphicon glyphicon-home" aria-hidden="true"> </i> Home</a></li>
+            <li><a href="/resources"><i class="glyphicon glyphicon-book" aria-hidden="true"> </i> Resources</a></li>
             <li class="active"><a href="#">HT Page</a></li>
           </ul>
         </div>
