--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
 					</div>
 					<div class="collapse navbar-collapse" id="collapseNav">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="/resources">Resources</a></li>
-							<li><a data-toggle="modal" data-target="#BHT">BHT</a></li>
+							<li class="active"><a href="#"><i class="glyphicon glyphicon-home" aria-hidden="true"> </i> Home</a></li>
+							<li><a href="/resources"><i class="glyphicon glyphicon-book" aria-hidden="true"> </i> Resources</a></li>
+							<li><a data-toggle="modal" data-target="#BHT"><i class="glyphicon glyphicon-calendar" aria-hidden="true"> </i> BHT</a></li>
 						</ul>
 					</div>
 				</div>
