Revert "don bosco logo"
This reverts commit d31a7fb5abfcd0df296e2493cd8ad41935b4a3c3.

--- a/public/update.html
+++ b/public/update.html
@@ -15,7 +15,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapseNav"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="false"></span></button>
-          <a class="navbar-brand" href="#">  <img class="img-responsive" style="width:74px;padding-top:14px;" src="images/DonBoscoLogo.png"> Don Bosco Hiep Si</a>
+          <a class="navbar-brand" href="#">Don Bosco Hiep Si</a>
         </div>
         <div class="collapse navbar-collapse" id="collapseNav">
           <ul class="nav navbar-nav">
