--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 	</head>
 
 	<body onload="init()" class="bgBrown">
-		<nav class="navbar navbar-inverse" role="navigation">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="container-fluid">
 					<div class="navbar-header">
