--- a/public/update.html
+++ b/public/update.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bgBrown">
-  <nav class="navbar navbar-inverse" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="container-fluid">
         <div class="navbar-header">
