--- a/public/resources.html
+++ b/public/resources.html
@@ -51,10 +51,15 @@
 		</div>
 		
 		 <div id="wrapper">
-       <!-- Sidebar -->
-        <div id="sidebar-wrapper" style="padding-top:0px">
+        
+    
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
             <ul class="sidebar-nav" style="margin-left:0;">
-                <li class="sidebar-brand">a href="#menu-toggle"  id="menu-toggle" style="margin-top:20px;float:right;" > <i class="glyphicon glyphicon-menu-hamburger " style="font-size:20px !Important;" aria-hidden="true" aria-hidden="true"></i> </li>
+                <li class="sidebar-brand">
+									<a href="#menu-toggle"  id="menu-toggle" style="margin-top:20px;float:right;" > <i class="glyphicon glyphicon-menu-hamburger " style="font-size:20px !Important;" aria-hidden="true" aria-hidden="true"></i> 
+                </li>
                 <li>
                     <a href="#teamNames"><i class="glyphicon glyphicon-user " aria-hidden="true"> </i> <span style="margin-left:10px;">Teams</span>  </a>
                 </li>
