--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,6 @@
 												<figcaption class="figure-caption">DHNH Mien Nam 2014</figcaption>
 											</figure>-->
 
-											<div class="container" style="padding-right: 60px">
 											<div id="myCarousel" class="carousel slide" data-ride="carousel">
 												<!-- Indicators -->
 												<ol class="carousel-indicators">
@@ -216,7 +215,7 @@
 													<span class="sr-only">Next</span>
 												</a>
 											</div>
-											</div>
+											
 
 										</div>
 									</div>
@@ -301,7 +300,7 @@
 											</figure>
 											<br>
 										</div>
-										<div class="col-md-6" style="padding-right:40px">
+										<div class="col-md-6">
 											<figure class="figure">
 												<img src="images/Video-CollageFlyer.png" alt="VideoContest" class="img-responsive">
 												<figcaption class="figure-caption">Video Contest</figcaption>
