equal height images

--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
 												<!-- Wrapper for slides -->
 												<div class="carousel-inner" role="listbox">
 													<div class="item active">
-														<img src="images/Dai-Hoi-NSHS-2014.jpg" class="img-responsive" alt="DHNH1">
+														<img src="images/DHNH.jpg" class="img-responsive" alt="DHNH1">
 													</div>
 
 													<div class="item">
@@ -215,7 +215,7 @@
 													<span class="sr-only">Next</span>
 												</a>
 											</div>
-											
+
 
 										</div>
 									</div>
