--- a/public/index.html
+++ b/public/index.html
@@ -308,14 +308,14 @@
 									<div class="row">
 										<div class="col-md-6">
 											<figure class="figure">
-												<img src="images/LogoFlyer.png" alt="DesignContest" class="img-responsive">
+												<img src="images/LogoFlyer.jpg" alt="DesignContest" class="img-responsive">
 												<figcaption class="figure-caption">Logo Design Contest</figcaption>
 											</figure>
 											<br>
 										</div>
 										<div class="col-md-6">
 											<figure class="figure">
-												<img src="images/Video-CollageFlyer.png" alt="VideoContest" class="img-responsive">
+												<img src="images/Video-CollageFlyer.jpg" alt="VideoContest" class="img-responsive">
 												<figcaption class="figure-caption">Video Contest</figcaption>
 											</figure>
 											<br>
