remove ad thing from counter

--- a/public/index.html
+++ b/public/index.html
@@ -522,7 +522,7 @@
 											</thead>
 									</table>
 								</div>
-								<div align=center><img src='http://www.counter12.com/img-31Z81D4Z-15.gif' border='0' alt='counter'><script type='text/javascript' src='http://www.counter12.com/ad.js?id=31Z81D4Z'></script></div>
+								<div align=center><img src='http://www.counter12.com/img-31Z81D4Z-15.gif' border='0' alt='counter'></div>
 							</div>
 						</div>
 					</div>
