--- a/public/index.html
+++ b/public/index.html
@@ -103,10 +103,14 @@
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
 											<div>
+                        <h3>Don Bosco Fun Run</h3>
+												• Time: Saturday, April 29
+												<br>• Location: Copperfield Elementary Track
+												<br>• Fundraising event
+												<br>• More details to come
 												
-												
-												<br><b>Đại Hội Nghĩa Hiệp</b>
-												<br>Details below
+												<h3>Đại Hội Nghĩa Hiệp</h3>
+												Details below
 												<!--<font size="-1">-->
 												<!--<br>• Time: June 29 - July 2, 2017
 												<br>• Location: Giáo Xứ Đức Mẹ La Vang
