--- a/public/index.html
+++ b/public/index.html
@@ -243,6 +243,8 @@
 												<br><a href="/DHNHForm1" target="_blank">Form 1: Registration</a>
 												<br><a href="/DHNHForm2" target="_blank">Form 2: Personal Health</a>
 												<br><a href="/DHNHForm3" target="_blank">Form 3: VAP form</a>
+												<br>
+												<br><a href="/consentForm" target="_blank">Consent Form for Sports/Skit/Dance/Jeopardy Practices</a>
 												<br><br>
 												<p>Note for Seniors: If you will be 18 years old by the date of camp, you are allowed to register as a participant under the category "Hiep Si 18+" on the condition that you attend ethics training (EIM) and show the certificate at camp.  You are still eligible to participate in all the activities such as sports and văn nghệ. </p>
 											</div>
