--- a/public/index.html
+++ b/public/index.html
@@ -350,6 +350,7 @@
 									<div class="row">
 										<div class="col-md-12">
 											<h3>Pre-Dai Hoi Contests</h3>
+											<h5>Feel free to start working on a submission for the following contests, but hold off on submitting them until further notice. Thanks!</h5>
 										</div>
 									</div>
 
