--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,8 @@
 												
 												<br><b>Đại Hội Nghĩa Hiệp</b>
 												<br>Details <a href="#DHNHPanelLink">below</a>
+												<img class="img-responsive" src="images/DHNHflyer.jpg">
+
 												<!--<font size="-1">-->
 												<!--<br>• Time: June 29 - July 2, 2017
 												<br>• Location: Giáo Xứ Đức Mẹ La Vang
@@ -404,13 +406,15 @@
 									<div class="row">
 										<div class="col-md-12">
 											<h4>Team Project: Our Story</h4>
+											<h6>Deadline for interviews: April 16</h6>
+											<div class="well">
 											Each team interview at least 3 parents. Ask about things like:
 											<br>• how they got here
 											<br>• what made them leave their home country
 											<br>• the journey
 											<br>• their goals for the future 
 											<br>• etc
-
+											</div>
 										</div>
 									</div>
 									
@@ -660,7 +664,7 @@
 
 
         <script type="text/javascript">
-            sr.reveal('.animatedpanel',{reset:false, viewFactor:0.15, easing:'ease-in-out', duration:500, origin:'left', scale:1});
+            sr.reveal('.animatedpanel',{reset:false, viewFactor:0.10, easing:'ease-in-out', duration:500, origin:'left', scale:1});
         </script>
 
 
