add fun run info

--- a/public/index.html
+++ b/public/index.html
@@ -105,11 +105,20 @@
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
 											<div>
+												<img src="images/funrunlogo.jpg" class="img-responsive" alt="Don Bosco Fun Run">
+												<br>Come out as we gather the church community in a fun day of running and raising money to support a good cause!
+												<br>• Time: April 29, 1pm - 4pm
+												<br>• Location: Copperfield Elementary School Track
+												<br>• Registration Fee: $5
+												<br>• All proceeds will go to Dong Men Thanh Gia -Ben Tre- Vietnam
+												<br>• Help orphans and the elderly
+												<br>• More info to come
 												
-												
+												<br>
+												<br>
 												<br><b>Đại Hội Nghĩa Hiệp</b>
 												<br>Details <a href="#DHNHPanelLink">below</a>
-												<img class="img-responsive" src="images/DHNHflyer.jpg">
+												<!--<img class="img-responsive" src="images/DHNHflyer.jpg">-->
 
 												<!--<font size="-1">-->
 												<!--<br>• Time: June 29 - July 2, 2017
