update team scores

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
 											<br>December: <b>Giacobe Tien</b> and <font size="-2"><b>Toma</b></font>
 											<br>January: <b>Nathanaen</b> and <font size="-1">(<b>Toma</b> and <b>Giacobe Tien</b>)</font>
 											<br>February: <b>Giacobe Tien</b>
+											<br>March: <b>Giacobe Tien</b>
 											<br>
 											<font size="-1">
 											<br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
