--- a/public/index.html
+++ b/public/index.html
@@ -247,8 +247,8 @@
 												<br>• Time: June 29 - July 2, 2017
 												<br>• Location: Giáo Xứ Đức Mẹ La Vang
 												<br>12320 Old Foltin Rd, Houston, TX 77086
-												<br>• Registration Fee: $80
-												<br>• Deadline to register: May 31
+												<br>• Registration Fee: $80, plus $5 for DB T-shirt
+												<br>• Deadline to turn in forms: April 30
 											</div>
 										</div>
 										<div class="col-md-6">
