add practice times

--- a/public/index.html
+++ b/public/index.html
@@ -299,7 +299,16 @@
 
 												<br><br><br>
 												
-												Tryouts, Practice times: TBA
+												Tryouts: Saturday April 22, 4pm-7pm
+												<br>
+												<h4>Official practices: 
+													<br>Wells Branch Park<br>2016 Klattenhoff Dr. <br>Austin TX 78728</h4>
+												<h4>Saturdays, 4pm-7pm</h4>
+												<ul>
+													<li>• May 13, May 20, May 27</li>
+													<li>• June 3, June 10, June 17, June 24</li>
+												</ul>
+
 												<br><br>
 												Note: You can only officially be in one sport, since they might be playing at the same time.
 												However, at Dai Hoi if your team is not currently playing and the coaches are okay with it, you can sub in to other sports.
@@ -350,7 +359,13 @@
 													<li>Saturday: Đồng hành với Chúa </li>
 													<li>• Open to interpretation ("modern")</li>
 												</ul>
-												Practice times: TBA
+												
+												<br>
+												<h4>Official practices: Hoi Truong</h4>
+												• Traditional: Fridays 6pm-9pm
+												<br>• May 12, May 19, May 26
+												<br>• June 4, June 11, June 18, June 25
+
 											</div>
 										</div>
 										<div class="col-md-4">
@@ -368,7 +383,7 @@
 									<div class="row">
 										<div class="col-md-12">
 											<h3>Pre-Dai Hoi Contests</h3>
-											<h5>Feel free to start working on a submission for the following contests, but hold off on submitting them until further notice. Thanks!</h5>
+											<h5>Feel free to start working on a submission for the following contests, but hold off on submitting them until further notice. If you are interested in the video competition, please contact Tr. Khang Pham. Thanks!</h5>
 										</div>
 									</div>
 
