--- a/public/index.html
+++ b/public/index.html
@@ -302,7 +302,7 @@
 												Tryouts: Saturday April 22, 4pm-7pm
 												<br>
 												<h4>Official practices: 
-													<br>Wells Branch Park<br>2016 Klattenhoff Dr. <br>Austin TX 78728</h4>
+													<br>Wells Branch Park</h4>2016 Klattenhoff Dr. <br>Austin TX 78728
 												<h4>Saturdays, 4pm-7pm</h4>
 												<ul>
 													<li>• May 13, May 20, May 27</li>
@@ -350,11 +350,11 @@
 												<ul class="list-unstyled">
 													<li>Friday: Ca Dao Việt Nam (traditional)</li>
 													<li>
-														<ul>
+														<!--<ul>
 															<li>• văn hóa</li>
 															<li>• lịch sử</li>
 															<li>• quê hương</li>
-														</ul>
+														</ul>-->
 													</li>
 													<li>Saturday: Đồng hành với Chúa </li>
 													<li>• Open to interpretation ("modern")</li>
@@ -364,6 +364,10 @@
 												<h4>Official practices: Hoi Truong</h4>
 												• Traditional: Fridays 6pm-9pm
 												<br>• May 12, May 19, May 26
+												<br>• June 2, June 9, June 16, June 23
+												<br><br>
+												• Journey with Jesus: Sundays 1pm-4pm
+												<br>• May 14, May 21, May 28
 												<br>• June 4, June 11, June 18, June 25
 
 											</div>
