--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,11 @@
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
 											<div>
+												<h4>Holy Thursday Eucharistic Adoration</h4>
+												After Holy Thursday Mass (~8:30pm)
+												<br>Come spend time with Jesus during Holy week
+												<br><br><br>
+												
 												<img src="images/funrunlogo.jpg" class="img-responsive" alt="Don Bosco Fun Run">
 												<br>Come out as we gather the church community in a fun day of running and raising money to support a good cause!
 												<br>• Time: April 29, 1pm - 4pm
