--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,8 @@
 											<h2>Announcements</h2>
 											<!--Please enroll in the Remind group to receive important announcements!-->
 											<!--<br><br>-->
-											<h5>Project Info posted in the <a href="#AssignmentsPanelLink">Assignments</a> section
+											<h5>Project Info posted in the <a href="#AssignmentsPanelLink">Assignments</a> section</h5>
 
-											<h5>As we go through our spiritual journey of Lent, taking time to reflect and do the BHT will give triple points</h5>
 											<br><br>
 
 
@@ -106,11 +105,7 @@
 										<div class="col-md-4">
 											<h2>Upcoming Events</h2>
 											<div>
-												<h4>Holy Thursday Eucharistic Adoration</h4>
-												After Holy Thursday Mass (~8:30pm)
-												<br>Come spend time with Jesus during Holy week
-												<br><br><br>
-												
+
 												<img src="images/funrunlogo.jpg" class="img-responsive" alt="Don Bosco Fun Run">
 												<br>Come out as we gather the church community in a fun day of running and raising money to support a good cause!
 												<br>• Time: April 29, 1pm - 4pm
