--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
 												<h5>What do I need to do to participate?</h5>
 												• Get sponsors (friends, family, neighbors, teachers, etc) to pledge
 												<br>• For each lap range you achieve, your sponsors will donate to the cause
-												
+												<h4><a href="/FunRunForm" target="_blank">Click here to download the form</a></h4>
 												
 												<br>
 												<br>
