--- a/public/index.html
+++ b/public/index.html
@@ -69,13 +69,15 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-4">
-											<h2>Announcements</h2>
+											<h2><u>Announcements</u></h2>
 											<!--Please enroll in the Remind group to receive important announcements!-->
 											<!--<br><br>-->
 
 											<div class="textfromleft">
+												<h3>•Deadline to turn in DHNH <a href="#collapseDHNH">forms</a>: April 30</h3>
+												<br>
 
-												<h5>Project Info posted in the <a href="#AssignmentsPanelLink">Assignments</a> section</h5>
+												<h5>•Project Info posted in the <a href="#AssignmentsPanelLink">Assignments</a> section</h5>
 
 												<br><br>
 
@@ -114,7 +116,7 @@
 
 										</div>
 										<div class="col-md-4">
-											<h2>Upcoming Events</h2>
+											<h2><u>Upcoming Events</u></h2>
 											<div class="textfromright">
 
 												<img src="images/funrunlogo.jpg" class="img-responsive" alt="Don Bosco Fun Run">
@@ -132,8 +134,9 @@
 												
 												<br>
 												<br>
-												<br><b>Đại Hội Nghĩa Hiệp</b>
-												<br>Details <a href="#DHNHPanelLink">below</a>
+												<br>
+												<h4><u>Đại Hội Nghĩa Hiệp</u></h4>
+												<br>•Details <a href="#DHNHPanelLink">below</a>
 												<!--<img class="img-responsive" src="images/DHNHflyer.jpg">-->
 
 												<!--<font size="-1">-->
@@ -258,8 +261,9 @@
 												<br>• Time: June 29 - July 2, 2017
 												<br>• Location: Giáo Xứ Đức Mẹ La Vang
 												<br>12320 Old Foltin Rd, Houston, TX 77086
-												<br>• Registration Fee: $80, plus $5 for DB T-shirt
-												<br>• Deadline to turn in forms: April 30
+												<br>• We will provide transportation (charter buses) to and from church
+												<br>• Registration Fee: <b>$80</b>, plus <b>$5</b> for DB T-shirt
+												<br>• Deadline to turn in forms: <b>April 30</b>
 											</div>
 										</div>
 										<div class="col-md-6">
