--- a/public/index.html
+++ b/public/index.html
@@ -312,10 +312,14 @@
 												<h4>Soccer</h4>
 												Coaches: Tr. Viet Mai, Tr. Long Ho
 
+												<h4>Flag Football</h4>
+												Coaches: TBA
+
+												<h4>Dodgeball</h4>
+												Coaches: Tr. Phuong Nam, Tr. Annie
+
 												<br><br><br>
 												
-												Tryouts: Saturday April 22, 4pm-7pm
-												<br>
 												<h4>Official practices: 
 													<br>Wells Branch Park</h4>2016 Klattenhoff Dr. <br>Austin TX 78728
 												<h4>Saturdays, 4pm-7pm</h4>
