add some headlines

--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,29 @@
 												<br>
 												<h4><u>Đại Hội Nghĩa Hiệp</u></h4>
 												<br>•Details <a href="#DHNHPanelLink">below</a>
+												<br>
+												<h3>Sports</h3>
+												<div class="well">
+													<h4>Official practices: 
+													<br>Wells Branch Park</h4>2016 Klattenhoff Dr. <br>Austin TX 78728
+													<h4>Saturdays, 4pm-7pm</h4>
+													<ul>
+														<li>• May 13, May 20, May 27</li>
+														<li>• June 3, June 10, June 17, June 24</li>
+													</ul>
+												</div>
+												<br>
+												<h3>Skit/Dance</h3>
+												<div class="well">
+													<h4>Official practices: Hoi Truong</h4>
+													• Traditional: Fridays 6pm-9pm
+													<br>• May 12, May 19, May 26
+													<br>• June 2, June 9, June 16, June 23
+													<br><br>
+													• Journey with Jesus: Sundays 1pm-4pm
+													<br>• May 14, May 21, May 28
+													<br>• June 4, June 11, June 18, June 25
+												</div>
 												<!--<img class="img-responsive" src="images/DHNHflyer.jpg">-->
 
 												<!--<font size="-1">-->
